; ModuleID = '/home/carl/AnghaBench/systemd/src/systemctl/extr_systemctl.c_release_busses.c'
source_filename = "/home/carl/AnghaBench/systemd/src/systemctl/extr_systemctl.c_release_busses.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_BUS_FOCUS_MAX = common dso_local global i64 0, align 8
@buses = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @release_busses to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_busses() #0 {
  %1 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  br label %2

2:                                                ; preds = %15, %0
  %3 = load i64, i64* %1, align 8
  %4 = load i64, i64* @_BUS_FOCUS_MAX, align 8
  %5 = icmp ult i64 %3, %4
  br i1 %5, label %6, label %18

6:                                                ; preds = %2
  %7 = load i32*, i32** @buses, align 8
  %8 = load i64, i64* %1, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @sd_bus_flush_close_unref(i32 %10)
  %12 = load i32*, i32** @buses, align 8
  %13 = load i64, i64* %1, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  store i32 %11, i32* %14, align 4
  br label %15

15:                                               ; preds = %6
  %16 = load i64, i64* %1, align 8
  %17 = add i64 %16, 1
  store i64 %17, i64* %1, align 8
  br label %2

18:                                               ; preds = %2
  ret void
}

declare dso_local i32 @sd_bus_flush_close_unref(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
